tag-1.3.5 20220121
  - Finish disabling hourly views

tag-1.3.4 20220119
  - More materialized view refinement, consolidate sum_usage2_* into sum_usage_*

tag-1.3.3 20220114
  - Introduce user+client materialized views

tag-1.3.2 20211213
  - Write use_user to the database by adding it to the cols list

tag-1.3.1 20211213
  - Set unknown/anonymous use_user values when the input doesn't have it

tag-1.3.0 20211210
  - Standarize unknown/anonymous use_user values