@@ -1,3 +1,6 @@
+tag-1.3.6 20220121
+  - Fix refresh all materialized views
+
 tag-1.3.5 20220121
   - Finish disabling hourly views
 
